deploy/components/paperless/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: paperless
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres # This MUST match the template label below
  template:
    metadata:
      labels:
        app: postgres # The "badge" for the DB Pod
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 10Gi
