deploy/components/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: paperless-ngx # Replace with the actual namespace used by that app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: paperless.nibblesnbits.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-web # Replace with the actual name of your service
            port:
              number: 8000 # Replace with your service's port
